[project]
name = "whos-home"
version = "1.0.0"
description = "ðŸ›°ï¸ scan for people on your local network and see whos home"
authors = [{ name = "ch55secake"} ]
license = {text = "GPL-3.0"}
readme = "README.md"

requires-python = ">=3.12"

[tool.poetry]
packages = [{ include = "src" }]

[tool.black]
line-length = 120

[tool.poetry.dependencies]
typer = "0.15.2"
pylint = "3.3.6"
black = "25.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-mock = "3.14.0"
xmltodict = "0.14.2"

[tool.poetry.group.dev.dependencies]
nuitka = "^2.6.9"

[tool.poetry.scripts]
build_binary="build_binary:build"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
